--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,26 @@
+Brotli==1.1.0
+cffi==1.17.1
 colorama==0.4.6
 contourpy==1.3.1
+cssselect2==0.7.0
 cycler==0.12.1
 fonttools==4.55.0
 imageio==2.36.0
+Jinja2==3.1.4
 joblib==1.4.2
 kiwisolver==1.4.7
 lazy_loader==0.4
+MarkupSafe==3.0.2
 matplotlib==3.9.2
 networkx==3.4.2
 numpy==2.1.3
 opencv-python==4.10.0.84
 packaging==24.2
-pillow==11.0.0
+pillow==10.4.0
+pycparser==2.22
+pydyf==0.11.0
 pyparsing==3.2.0
+pyphen==0.15.0
 python-dateutil==2.9.0.post0
 scikit-image==0.24.0
 scikit-learn==1.5.2
@@ -20,4 +28,9 @@ scipy==1.14.1
 six==1.16.0
 threadpoolctl==3.5.0
 tifffile==2024.9.20
+tinycss2==1.4.0
+tinyhtml5==2.0.0
 tqdm==4.67.0
+weasyprint==63.0
+webencodings==0.5.1
+zopfli==0.2.3.post1
