--- a/data/projects/sample_project/project_config.json
+++ b/data/projects/sample_project/project_config.json
@@ -1,6 +1,5 @@
 {
-    "reference_color_checker_filename": "reference_color_checker.png",
-    "colorchecker_reference_for_project": [
-        "reference_color_checker.png" 
-    ]
+    "reference_color_checker_path": "colorchecker/reference_color_checker.png",
+    "aruco_reference_path": null,
+    "technical_drawing_path": null
 }
