--- a/.gitattributes
+++ b/.gitattributes
@@ -13,4 +13,5 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.ipynb filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
