--- a/data/projects/benagol/project_config.json
+++ b/data/projects/benagol/project_config.json
@@ -1,7 +1,8 @@
 {
     "reference_color_checker_path": "dataset/colorchecker",
     "training_path": "dataset/training",
-    "technical_drawing_path": null,
+    "object_reference_path": "dataset/object",
+    "technical_drawing_path": "dataset/drawing",
     "aruco_reference_path": "dataset/aruco",
     "aruco_marker_map": {},
     "aruco_output_size": [
