Add Visual Analyzer GUI for image and color analysis
- Implemented a Tkinter-based GUI for the Visual Analyzer application.
- Added project selection and file selection for images and color checkers.
- Included options for various analysis steps such as color alignment, geometrical alignment, and aggregation.
- Integrated error handling and user feedback through message boxes.
- Enabled debug mode for enhanced layout during development.
- Connected the GUI to the analysis pipeline for processing user inputs.

--- a/data/projects/benagol/dataset_item_processing_config.json
+++ b/data/projects/benagol/dataset_item_processing_config.json
@@ -83,6 +83,66 @@
                     "x": 263,
                     "y": 273,
                     "radius": 7
+                },
+                {
+                    "x": 336,
+                    "y": 199,
+                    "radius": 7
+                },
+                {
+                    "x": 319,
+                    "y": 186,
+                    "radius": 7
+                },
+                {
+                    "x": 88,
+                    "y": 274,
+                    "radius": 7
+                },
+                {
+                    "x": 366,
+                    "y": 277,
+                    "radius": 7
+                },
+                {
+                    "x": 180,
+                    "y": 233,
+                    "radius": 7
+                },
+                {
+                    "x": 226,
+                    "y": 246,
+                    "radius": 7
+                },
+                {
+                    "x": 287,
+                    "y": 242,
+                    "radius": 7
+                },
+                {
+                    "x": 235,
+                    "y": 199,
+                    "radius": 7
+                },
+                {
+                    "x": 346,
+                    "y": 226,
+                    "radius": 7
+                },
+                {
+                    "x": 352,
+                    "y": 213,
+                    "radius": 7
+                },
+                {
+                    "x": 320,
+                    "y": 224,
+                    "radius": 7
+                },
+                {
+                    "x": 304,
+                    "y": 142,
+                    "radius": 7
                 }
             ]
         },
@@ -163,6 +223,71 @@
                 {
                     "x": 430,
                     "y": 550,
+                    "radius": 7
+                },
+                {
+                    "x": 378,
+                    "y": 606,
+                    "radius": 7
+                },
+                {
+                    "x": 344,
+                    "y": 595,
+                    "radius": 7
+                },
+                {
+                    "x": 314,
+                    "y": 584,
+                    "radius": 7
+                },
+                {
+                    "x": 272,
+                    "y": 600,
+                    "radius": 7
+                },
+                {
+                    "x": 263,
+                    "y": 563,
+                    "radius": 7
+                },
+                {
+                    "x": 388,
+                    "y": 620,
+                    "radius": 7
+                },
+                {
+                    "x": 379,
+                    "y": 630,
+                    "radius": 7
+                },
+                {
+                    "x": 456,
+                    "y": 575,
+                    "radius": 7
+                },
+                {
+                    "x": 424,
+                    "y": 576,
+                    "radius": 7
+                },
+                {
+                    "x": 412,
+                    "y": 574,
+                    "radius": 7
+                },
+                {
+                    "x": 409,
+                    "y": 570,
+                    "radius": 7
+                },
+                {
+                    "x": 413,
+                    "y": 518,
+                    "radius": 7
+                },
+                {
+                    "x": 418,
+                    "y": 508,
                     "radius": 7
                 }
             ]
