--- a/data/projects/benagol/project_config.json
+++ b/data/projects/benagol/project_config.json
@@ -1,9 +1,11 @@
 {
-    "reference_color_checker_path": "dataset/colorchecker",
+    "reference_color_checker_path": "dataset/colorchecker/colorchecker.png",
     "training_path": "dataset/training",
-    "object_reference_path": "dataset/object",
-    "technical_drawing_path": "dataset/drawing",
-    "aruco_reference_path": "dataset/aruco",
+    "object_reference_path": "dataset/object/image.png",
+    "technical_drawing_path_layer_1": "dataset/drawing/image.png",
+    "technical_drawing_path_layer_2": "dataset/drawing/image1.png",
+    "technical_drawing_path_layer_3": "dataset/drawing/image2.png",
+    "aruco_reference_path": "dataset/aruco/default_aruco_reference.png",
     "aruco_marker_map": {},
     "aruco_output_size": [
         1000,
