--- a/data/projects/benagol/project_config.json
+++ b/data/projects/benagol/project_config.json
@@ -2,10 +2,10 @@
     "reference_color_checker_path": "dataset/colorchecker/colorchecker.png",
     "training_path": "dataset/training",
     "colorchecker_reference_for_project": [],
-    "object_reference_path": null,
-    "technical_drawing_path_layer_1": null,
-    "technical_drawing_path_layer_2": null,
-    "technical_drawing_path_layer_3": null,
+    "object_reference_path": "dataset/drawing/image.png",
+    "technical_drawing_path_layer_1": "dataset/drawing/image.png",
+    "technical_drawing_path_layer_2": "dataset/drawing/image1.png",
+    "technical_drawing_path_layer_3": "dataset/drawing/image2.png",
     "aruco_reference_path": "dataset/aruco/default_aruco_reference.png",
     "aruco_marker_map": {},
     "aruco_output_size": [
